Turtle/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> command
Rule 2     program -> program command
Rule 3     varlist -> VAR
Rule 4     varlist -> varlist VAR
Rule 5     command -> to : VAR ( varlist ) [ program ]
Rule 6     valuelist -> value
Rule 7     valuelist -> valuelist value
Rule 8     command -> VAR ( valuelist )
Rule 9     command -> make " VAR value
Rule 10    command -> make " VAR value ARTH value
Rule 11    command -> forward value
Rule 12    command -> fd value
Rule 13    command -> back value
Rule 14    command -> bk value
Rule 15    command -> left value
Rule 16    command -> lt value
Rule 17    command -> right value
Rule 18    command -> rt value
Rule 19    command -> setpos [ value value ]
Rule 20    command -> setxy [ value value ]
Rule 21    command -> setx value
Rule 22    command -> sety value
Rule 23    command -> home
Rule 24    command -> pendown
Rule 25    command -> pd
Rule 26    command -> penup
Rule 27    command -> pu
Rule 28    command -> setpencolor [ value value value ]
Rule 29    command -> while [ : VAR SIGNAL value ] [ program ]
Rule 30    command -> if [ : VAR SIGNAL value ] [ program ]
Rule 31    command -> if [ : VAR SIGNAL value ] [ program ] else [ program ]
Rule 32    command -> repeat value [ program ]
Rule 33    value -> INT
Rule 34    value -> FLOAT
Rule 35    value -> VAR
Rule 36    value -> value + value
Rule 37    value -> value - value
Rule 38    value -> value * value
Rule 39    value -> value / value
Rule 40    value -> ( value )
Rule 41    value -> : value
Rule 42    value -> " VAR

Terminals, with rules where they appear

"                    : 9 10 42
(                    : 5 8 40
)                    : 5 8 40
*                    : 38
+                    : 36
-                    : 37
/                    : 39
:                    : 5 29 30 31 41
ARTH                 : 10
FLOAT                : 34
INT                  : 33
SIGNAL               : 29 30 31
VAR                  : 3 4 5 8 9 10 29 30 31 35 42
[                    : 5 19 20 28 29 29 30 30 31 31 31 32
]                    : 5 19 20 28 29 29 30 30 31 31 31 32
back                 : 13
bk                   : 14
else                 : 31
error                : 
fd                   : 12
forward              : 11
home                 : 23
if                   : 30 31
left                 : 15
lt                   : 16
make                 : 9 10
pd                   : 25
pendown              : 24
penup                : 26
pu                   : 27
repeat               : 32
right                : 17
rt                   : 18
setpencolor          : 28
setpos               : 19
setx                 : 21
setxy                : 20
sety                 : 22
to                   : 5
while                : 29

Nonterminals, with rules where they appear

command              : 1 2
program              : 2 5 29 30 31 31 32 0
value                : 6 7 9 10 10 11 12 13 14 15 16 17 18 19 19 20 20 21 22 28 28 28 29 30 31 32 36 36 37 37 38 38 39 39 40 41
valuelist            : 7 8
varlist              : 4 5

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . command
    (2) program -> . program command
    (5) command -> . to : VAR ( varlist ) [ program ]
    (8) command -> . VAR ( valuelist )
    (9) command -> . make " VAR value
    (10) command -> . make " VAR value ARTH value
    (11) command -> . forward value
    (12) command -> . fd value
    (13) command -> . back value
    (14) command -> . bk value
    (15) command -> . left value
    (16) command -> . lt value
    (17) command -> . right value
    (18) command -> . rt value
    (19) command -> . setpos [ value value ]
    (20) command -> . setxy [ value value ]
    (21) command -> . setx value
    (22) command -> . sety value
    (23) command -> . home
    (24) command -> . pendown
    (25) command -> . pd
    (26) command -> . penup
    (27) command -> . pu
    (28) command -> . setpencolor [ value value value ]
    (29) command -> . while [ : VAR SIGNAL value ] [ program ]
    (30) command -> . if [ : VAR SIGNAL value ] [ program ]
    (31) command -> . if [ : VAR SIGNAL value ] [ program ] else [ program ]
    (32) command -> . repeat value [ program ]

    to              shift and go to state 3
    VAR             shift and go to state 4
    make            shift and go to state 5
    forward         shift and go to state 6
    fd              shift and go to state 7
    back            shift and go to state 8
    bk              shift and go to state 9
    left            shift and go to state 10
    lt              shift and go to state 11
    right           shift and go to state 12
    rt              shift and go to state 13
    setpos          shift and go to state 14
    setxy           shift and go to state 15
    setx            shift and go to state 16
    sety            shift and go to state 17
    home            shift and go to state 18
    pendown         shift and go to state 19
    pd              shift and go to state 20
    penup           shift and go to state 21
    pu              shift and go to state 22
    setpencolor     shift and go to state 23
    while           shift and go to state 24
    if              shift and go to state 25
    repeat          shift and go to state 26

    program                        shift and go to state 1
    command                        shift and go to state 2

state 1

    (0) S' -> program .
    (2) program -> program . command
    (5) command -> . to : VAR ( varlist ) [ program ]
    (8) command -> . VAR ( valuelist )
    (9) command -> . make " VAR value
    (10) command -> . make " VAR value ARTH value
    (11) command -> . forward value
    (12) command -> . fd value
    (13) command -> . back value
    (14) command -> . bk value
    (15) command -> . left value
    (16) command -> . lt value
    (17) command -> . right value
    (18) command -> . rt value
    (19) command -> . setpos [ value value ]
    (20) command -> . setxy [ value value ]
    (21) command -> . setx value
    (22) command -> . sety value
    (23) command -> . home
    (24) command -> . pendown
    (25) command -> . pd
    (26) command -> . penup
    (27) command -> . pu
    (28) command -> . setpencolor [ value value value ]
    (29) command -> . while [ : VAR SIGNAL value ] [ program ]
    (30) command -> . if [ : VAR SIGNAL value ] [ program ]
    (31) command -> . if [ : VAR SIGNAL value ] [ program ] else [ program ]
    (32) command -> . repeat value [ program ]

    to              shift and go to state 3
    VAR             shift and go to state 4
    make            shift and go to state 5
    forward         shift and go to state 6
    fd              shift and go to state 7
    back            shift and go to state 8
    bk              shift and go to state 9
    left            shift and go to state 10
    lt              shift and go to state 11
    right           shift and go to state 12
    rt              shift and go to state 13
    setpos          shift and go to state 14
    setxy           shift and go to state 15
    setx            shift and go to state 16
    sety            shift and go to state 17
    home            shift and go to state 18
    pendown         shift and go to state 19
    pd              shift and go to state 20
    penup           shift and go to state 21
    pu              shift and go to state 22
    setpencolor     shift and go to state 23
    while           shift and go to state 24
    if              shift and go to state 25
    repeat          shift and go to state 26

    command                        shift and go to state 27

state 2

    (1) program -> command .

    to              reduce using rule 1 (program -> command .)
    VAR             reduce using rule 1 (program -> command .)
    make            reduce using rule 1 (program -> command .)
    forward         reduce using rule 1 (program -> command .)
    fd              reduce using rule 1 (program -> command .)
    back            reduce using rule 1 (program -> command .)
    bk              reduce using rule 1 (program -> command .)
    left            reduce using rule 1 (program -> command .)
    lt              reduce using rule 1 (program -> command .)
    right           reduce using rule 1 (program -> command .)
    rt              reduce using rule 1 (program -> command .)
    setpos          reduce using rule 1 (program -> command .)
    setxy           reduce using rule 1 (program -> command .)
    setx            reduce using rule 1 (program -> command .)
    sety            reduce using rule 1 (program -> command .)
    home            reduce using rule 1 (program -> command .)
    pendown         reduce using rule 1 (program -> command .)
    pd              reduce using rule 1 (program -> command .)
    penup           reduce using rule 1 (program -> command .)
    pu              reduce using rule 1 (program -> command .)
    setpencolor     reduce using rule 1 (program -> command .)
    while           reduce using rule 1 (program -> command .)
    if              reduce using rule 1 (program -> command .)
    repeat          reduce using rule 1 (program -> command .)
    $end            reduce using rule 1 (program -> command .)
    ]               reduce using rule 1 (program -> command .)


state 3

    (5) command -> to . : VAR ( varlist ) [ program ]

    :               shift and go to state 28


state 4

    (8) command -> VAR . ( valuelist )

    (               shift and go to state 29


state 5

    (9) command -> make . " VAR value
    (10) command -> make . " VAR value ARTH value

    "               shift and go to state 30


state 6

    (11) command -> forward . value
    (33) value -> . INT
    (34) value -> . FLOAT
    (35) value -> . VAR
    (36) value -> . value + value
    (37) value -> . value - value
    (38) value -> . value * value
    (39) value -> . value / value
    (40) value -> . ( value )
    (41) value -> . : value
    (42) value -> . " VAR

    INT             shift and go to state 32
    FLOAT           shift and go to state 33
    VAR             shift and go to state 34
    (               shift and go to state 35
    :               shift and go to state 36
    "               shift and go to state 37

    value                          shift and go to state 31

state 7

    (12) command -> fd . value
    (33) value -> . INT
    (34) value -> . FLOAT
    (35) value -> . VAR
    (36) value -> . value + value
    (37) value -> . value - value
    (38) value -> . value * value
    (39) value -> . value / value
    (40) value -> . ( value )
    (41) value -> . : value
    (42) value -> . " VAR

    INT             shift and go to state 32
    FLOAT           shift and go to state 33
    VAR             shift and go to state 34
    (               shift and go to state 35
    :               shift and go to state 36
    "               shift and go to state 37

    value                          shift and go to state 38

state 8

    (13) command -> back . value
    (33) value -> . INT
    (34) value -> . FLOAT
    (35) value -> . VAR
    (36) value -> . value + value
    (37) value -> . value - value
    (38) value -> . value * value
    (39) value -> . value / value
    (40) value -> . ( value )
    (41) value -> . : value
    (42) value -> . " VAR

    INT             shift and go to state 32
    FLOAT           shift and go to state 33
    VAR             shift and go to state 34
    (               shift and go to state 35
    :               shift and go to state 36
    "               shift and go to state 37

    value                          shift and go to state 39

state 9

    (14) command -> bk . value
    (33) value -> . INT
    (34) value -> . FLOAT
    (35) value -> . VAR
    (36) value -> . value + value
    (37) value -> . value - value
    (38) value -> . value * value
    (39) value -> . value / value
    (40) value -> . ( value )
    (41) value -> . : value
    (42) value -> . " VAR

    INT             shift and go to state 32
    FLOAT           shift and go to state 33
    VAR             shift and go to state 34
    (               shift and go to state 35
    :               shift and go to state 36
    "               shift and go to state 37

    value                          shift and go to state 40

state 10

    (15) command -> left . value
    (33) value -> . INT
    (34) value -> . FLOAT
    (35) value -> . VAR
    (36) value -> . value + value
    (37) value -> . value - value
    (38) value -> . value * value
    (39) value -> . value / value
    (40) value -> . ( value )
    (41) value -> . : value
    (42) value -> . " VAR

    INT             shift and go to state 32
    FLOAT           shift and go to state 33
    VAR             shift and go to state 34
    (               shift and go to state 35
    :               shift and go to state 36
    "               shift and go to state 37

    value                          shift and go to state 41

state 11

    (16) command -> lt . value
    (33) value -> . INT
    (34) value -> . FLOAT
    (35) value -> . VAR
    (36) value -> . value + value
    (37) value -> . value - value
    (38) value -> . value * value
    (39) value -> . value / value
    (40) value -> . ( value )
    (41) value -> . : value
    (42) value -> . " VAR

    INT             shift and go to state 32
    FLOAT           shift and go to state 33
    VAR             shift and go to state 34
    (               shift and go to state 35
    :               shift and go to state 36
    "               shift and go to state 37

    value                          shift and go to state 42

state 12

    (17) command -> right . value
    (33) value -> . INT
    (34) value -> . FLOAT
    (35) value -> . VAR
    (36) value -> . value + value
    (37) value -> . value - value
    (38) value -> . value * value
    (39) value -> . value / value
    (40) value -> . ( value )
    (41) value -> . : value
    (42) value -> . " VAR

    INT             shift and go to state 32
    FLOAT           shift and go to state 33
    VAR             shift and go to state 34
    (               shift and go to state 35
    :               shift and go to state 36
    "               shift and go to state 37

    value                          shift and go to state 43

state 13

    (18) command -> rt . value
    (33) value -> . INT
    (34) value -> . FLOAT
    (35) value -> . VAR
    (36) value -> . value + value
    (37) value -> . value - value
    (38) value -> . value * value
    (39) value -> . value / value
    (40) value -> . ( value )
    (41) value -> . : value
    (42) value -> . " VAR

    INT             shift and go to state 32
    FLOAT           shift and go to state 33
    VAR             shift and go to state 34
    (               shift and go to state 35
    :               shift and go to state 36
    "               shift and go to state 37

    value                          shift and go to state 44

state 14

    (19) command -> setpos . [ value value ]

    [               shift and go to state 45


state 15

    (20) command -> setxy . [ value value ]

    [               shift and go to state 46


state 16

    (21) command -> setx . value
    (33) value -> . INT
    (34) value -> . FLOAT
    (35) value -> . VAR
    (36) value -> . value + value
    (37) value -> . value - value
    (38) value -> . value * value
    (39) value -> . value / value
    (40) value -> . ( value )
    (41) value -> . : value
    (42) value -> . " VAR

    INT             shift and go to state 32
    FLOAT           shift and go to state 33
    VAR             shift and go to state 34
    (               shift and go to state 35
    :               shift and go to state 36
    "               shift and go to state 37

    value                          shift and go to state 47

state 17

    (22) command -> sety . value
    (33) value -> . INT
    (34) value -> . FLOAT
    (35) value -> . VAR
    (36) value -> . value + value
    (37) value -> . value - value
    (38) value -> . value * value
    (39) value -> . value / value
    (40) value -> . ( value )
    (41) value -> . : value
    (42) value -> . " VAR

    INT             shift and go to state 32
    FLOAT           shift and go to state 33
    VAR             shift and go to state 34
    (               shift and go to state 35
    :               shift and go to state 36
    "               shift and go to state 37

    value                          shift and go to state 48

state 18

    (23) command -> home .

    to              reduce using rule 23 (command -> home .)
    VAR             reduce using rule 23 (command -> home .)
    make            reduce using rule 23 (command -> home .)
    forward         reduce using rule 23 (command -> home .)
    fd              reduce using rule 23 (command -> home .)
    back            reduce using rule 23 (command -> home .)
    bk              reduce using rule 23 (command -> home .)
    left            reduce using rule 23 (command -> home .)
    lt              reduce using rule 23 (command -> home .)
    right           reduce using rule 23 (command -> home .)
    rt              reduce using rule 23 (command -> home .)
    setpos          reduce using rule 23 (command -> home .)
    setxy           reduce using rule 23 (command -> home .)
    setx            reduce using rule 23 (command -> home .)
    sety            reduce using rule 23 (command -> home .)
    home            reduce using rule 23 (command -> home .)
    pendown         reduce using rule 23 (command -> home .)
    pd              reduce using rule 23 (command -> home .)
    penup           reduce using rule 23 (command -> home .)
    pu              reduce using rule 23 (command -> home .)
    setpencolor     reduce using rule 23 (command -> home .)
    while           reduce using rule 23 (command -> home .)
    if              reduce using rule 23 (command -> home .)
    repeat          reduce using rule 23 (command -> home .)
    $end            reduce using rule 23 (command -> home .)
    ]               reduce using rule 23 (command -> home .)


state 19

    (24) command -> pendown .

    to              reduce using rule 24 (command -> pendown .)
    VAR             reduce using rule 24 (command -> pendown .)
    make            reduce using rule 24 (command -> pendown .)
    forward         reduce using rule 24 (command -> pendown .)
    fd              reduce using rule 24 (command -> pendown .)
    back            reduce using rule 24 (command -> pendown .)
    bk              reduce using rule 24 (command -> pendown .)
    left            reduce using rule 24 (command -> pendown .)
    lt              reduce using rule 24 (command -> pendown .)
    right           reduce using rule 24 (command -> pendown .)
    rt              reduce using rule 24 (command -> pendown .)
    setpos          reduce using rule 24 (command -> pendown .)
    setxy           reduce using rule 24 (command -> pendown .)
    setx            reduce using rule 24 (command -> pendown .)
    sety            reduce using rule 24 (command -> pendown .)
    home            reduce using rule 24 (command -> pendown .)
    pendown         reduce using rule 24 (command -> pendown .)
    pd              reduce using rule 24 (command -> pendown .)
    penup           reduce using rule 24 (command -> pendown .)
    pu              reduce using rule 24 (command -> pendown .)
    setpencolor     reduce using rule 24 (command -> pendown .)
    while           reduce using rule 24 (command -> pendown .)
    if              reduce using rule 24 (command -> pendown .)
    repeat          reduce using rule 24 (command -> pendown .)
    $end            reduce using rule 24 (command -> pendown .)
    ]               reduce using rule 24 (command -> pendown .)


state 20

    (25) command -> pd .

    to              reduce using rule 25 (command -> pd .)
    VAR             reduce using rule 25 (command -> pd .)
    make            reduce using rule 25 (command -> pd .)
    forward         reduce using rule 25 (command -> pd .)
    fd              reduce using rule 25 (command -> pd .)
    back            reduce using rule 25 (command -> pd .)
    bk              reduce using rule 25 (command -> pd .)
    left            reduce using rule 25 (command -> pd .)
    lt              reduce using rule 25 (command -> pd .)
    right           reduce using rule 25 (command -> pd .)
    rt              reduce using rule 25 (command -> pd .)
    setpos          reduce using rule 25 (command -> pd .)
    setxy           reduce using rule 25 (command -> pd .)
    setx            reduce using rule 25 (command -> pd .)
    sety            reduce using rule 25 (command -> pd .)
    home            reduce using rule 25 (command -> pd .)
    pendown         reduce using rule 25 (command -> pd .)
    pd              reduce using rule 25 (command -> pd .)
    penup           reduce using rule 25 (command -> pd .)
    pu              reduce using rule 25 (command -> pd .)
    setpencolor     reduce using rule 25 (command -> pd .)
    while           reduce using rule 25 (command -> pd .)
    if              reduce using rule 25 (command -> pd .)
    repeat          reduce using rule 25 (command -> pd .)
    $end            reduce using rule 25 (command -> pd .)
    ]               reduce using rule 25 (command -> pd .)


state 21

    (26) command -> penup .

    to              reduce using rule 26 (command -> penup .)
    VAR             reduce using rule 26 (command -> penup .)
    make            reduce using rule 26 (command -> penup .)
    forward         reduce using rule 26 (command -> penup .)
    fd              reduce using rule 26 (command -> penup .)
    back            reduce using rule 26 (command -> penup .)
    bk              reduce using rule 26 (command -> penup .)
    left            reduce using rule 26 (command -> penup .)
    lt              reduce using rule 26 (command -> penup .)
    right           reduce using rule 26 (command -> penup .)
    rt              reduce using rule 26 (command -> penup .)
    setpos          reduce using rule 26 (command -> penup .)
    setxy           reduce using rule 26 (command -> penup .)
    setx            reduce using rule 26 (command -> penup .)
    sety            reduce using rule 26 (command -> penup .)
    home            reduce using rule 26 (command -> penup .)
    pendown         reduce using rule 26 (command -> penup .)
    pd              reduce using rule 26 (command -> penup .)
    penup           reduce using rule 26 (command -> penup .)
    pu              reduce using rule 26 (command -> penup .)
    setpencolor     reduce using rule 26 (command -> penup .)
    while           reduce using rule 26 (command -> penup .)
    if              reduce using rule 26 (command -> penup .)
    repeat          reduce using rule 26 (command -> penup .)
    $end            reduce using rule 26 (command -> penup .)
    ]               reduce using rule 26 (command -> penup .)


state 22

    (27) command -> pu .

    to              reduce using rule 27 (command -> pu .)
    VAR             reduce using rule 27 (command -> pu .)
    make            reduce using rule 27 (command -> pu .)
    forward         reduce using rule 27 (command -> pu .)
    fd              reduce using rule 27 (command -> pu .)
    back            reduce using rule 27 (command -> pu .)
    bk              reduce using rule 27 (command -> pu .)
    left            reduce using rule 27 (command -> pu .)
    lt              reduce using rule 27 (command -> pu .)
    right           reduce using rule 27 (command -> pu .)
    rt              reduce using rule 27 (command -> pu .)
    setpos          reduce using rule 27 (command -> pu .)
    setxy           reduce using rule 27 (command -> pu .)
    setx            reduce using rule 27 (command -> pu .)
    sety            reduce using rule 27 (command -> pu .)
    home            reduce using rule 27 (command -> pu .)
    pendown         reduce using rule 27 (command -> pu .)
    pd              reduce using rule 27 (command -> pu .)
    penup           reduce using rule 27 (command -> pu .)
    pu              reduce using rule 27 (command -> pu .)
    setpencolor     reduce using rule 27 (command -> pu .)
    while           reduce using rule 27 (command -> pu .)
    if              reduce using rule 27 (command -> pu .)
    repeat          reduce using rule 27 (command -> pu .)
    $end            reduce using rule 27 (command -> pu .)
    ]               reduce using rule 27 (command -> pu .)


state 23

    (28) command -> setpencolor . [ value value value ]

    [               shift and go to state 49


state 24

    (29) command -> while . [ : VAR SIGNAL value ] [ program ]

    [               shift and go to state 50


state 25

    (30) command -> if . [ : VAR SIGNAL value ] [ program ]
    (31) command -> if . [ : VAR SIGNAL value ] [ program ] else [ program ]

    [               shift and go to state 51


state 26

    (32) command -> repeat . value [ program ]
    (33) value -> . INT
    (34) value -> . FLOAT
    (35) value -> . VAR
    (36) value -> . value + value
    (37) value -> . value - value
    (38) value -> . value * value
    (39) value -> . value / value
    (40) value -> . ( value )
    (41) value -> . : value
    (42) value -> . " VAR

    INT             shift and go to state 32
    FLOAT           shift and go to state 33
    VAR             shift and go to state 34
    (               shift and go to state 35
    :               shift and go to state 36
    "               shift and go to state 37

    value                          shift and go to state 52

state 27

    (2) program -> program command .

    to              reduce using rule 2 (program -> program command .)
    VAR             reduce using rule 2 (program -> program command .)
    make            reduce using rule 2 (program -> program command .)
    forward         reduce using rule 2 (program -> program command .)
    fd              reduce using rule 2 (program -> program command .)
    back            reduce using rule 2 (program -> program command .)
    bk              reduce using rule 2 (program -> program command .)
    left            reduce using rule 2 (program -> program command .)
    lt              reduce using rule 2 (program -> program command .)
    right           reduce using rule 2 (program -> program command .)
    rt              reduce using rule 2 (program -> program command .)
    setpos          reduce using rule 2 (program -> program command .)
    setxy           reduce using rule 2 (program -> program command .)
    setx            reduce using rule 2 (program -> program command .)
    sety            reduce using rule 2 (program -> program command .)
    home            reduce using rule 2 (program -> program command .)
    pendown         reduce using rule 2 (program -> program command .)
    pd              reduce using rule 2 (program -> program command .)
    penup           reduce using rule 2 (program -> program command .)
    pu              reduce using rule 2 (program -> program command .)
    setpencolor     reduce using rule 2 (program -> program command .)
    while           reduce using rule 2 (program -> program command .)
    if              reduce using rule 2 (program -> program command .)
    repeat          reduce using rule 2 (program -> program command .)
    $end            reduce using rule 2 (program -> program command .)
    ]               reduce using rule 2 (program -> program command .)


state 28

    (5) command -> to : . VAR ( varlist ) [ program ]

    VAR             shift and go to state 53


state 29

    (8) command -> VAR ( . valuelist )
    (6) valuelist -> . value
    (7) valuelist -> . valuelist value
    (33) value -> . INT
    (34) value -> . FLOAT
    (35) value -> . VAR
    (36) value -> . value + value
    (37) value -> . value - value
    (38) value -> . value * value
    (39) value -> . value / value
    (40) value -> . ( value )
    (41) value -> . : value
    (42) value -> . " VAR

    INT             shift and go to state 32
    FLOAT           shift and go to state 33
    VAR             shift and go to state 34
    (               shift and go to state 35
    :               shift and go to state 36
    "               shift and go to state 37

    valuelist                      shift and go to state 54
    value                          shift and go to state 55

state 30

    (9) command -> make " . VAR value
    (10) command -> make " . VAR value ARTH value

    VAR             shift and go to state 56


state 31

    (11) command -> forward value .
    (36) value -> value . + value
    (37) value -> value . - value
    (38) value -> value . * value
    (39) value -> value . / value

    to              reduce using rule 11 (command -> forward value .)
    VAR             reduce using rule 11 (command -> forward value .)
    make            reduce using rule 11 (command -> forward value .)
    forward         reduce using rule 11 (command -> forward value .)
    fd              reduce using rule 11 (command -> forward value .)
    back            reduce using rule 11 (command -> forward value .)
    bk              reduce using rule 11 (command -> forward value .)
    left            reduce using rule 11 (command -> forward value .)
    lt              reduce using rule 11 (command -> forward value .)
    right           reduce using rule 11 (command -> forward value .)
    rt              reduce using rule 11 (command -> forward value .)
    setpos          reduce using rule 11 (command -> forward value .)
    setxy           reduce using rule 11 (command -> forward value .)
    setx            reduce using rule 11 (command -> forward value .)
    sety            reduce using rule 11 (command -> forward value .)
    home            reduce using rule 11 (command -> forward value .)
    pendown         reduce using rule 11 (command -> forward value .)
    pd              reduce using rule 11 (command -> forward value .)
    penup           reduce using rule 11 (command -> forward value .)
    pu              reduce using rule 11 (command -> forward value .)
    setpencolor     reduce using rule 11 (command -> forward value .)
    while           reduce using rule 11 (command -> forward value .)
    if              reduce using rule 11 (command -> forward value .)
    repeat          reduce using rule 11 (command -> forward value .)
    $end            reduce using rule 11 (command -> forward value .)
    ]               reduce using rule 11 (command -> forward value .)
    +               shift and go to state 57
    -               shift and go to state 58
    *               shift and go to state 59
    /               shift and go to state 60


state 32

    (33) value -> INT .
